--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -777,6 +777,7 @@ input[type="submit"]:hover, button[type=submit]:hover {background-color: #222}
 .product-main-img {
     margin-bottom: 20px;
 }
+
 .product-gallery {
     margin-bottom: 25px;
     margin-left: -15px;
@@ -1152,4 +1153,7 @@ label {
 }
 .border-1 {
     box-shadow: 0px 1px 2px lightgrey, 1px 3px 1px lightgrey;
+}
+.mainmenu-area {
+    background-color: #f8f9fa;
 }
