--- a/public/assets/css/orders.css
+++ b/public/assets/css/orders.css
@@ -1,3 +1,15 @@
+.half-opacity {
+    position: relative;
+}
+.half-opacity ::before {
+    position: absolute;
+    content:"";
+    width: 100%;
+    height: 100%;
+    left:0;
+    top:0;
+    background: linear-gradient(to bottom,rgba(0,0,0,0) 50%,rgba(255,255,255,0.5) 100%);
+}
 #orders {
     display: flex;
     justify-content: center;
