--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,6 +49,10 @@ body { font-family:Arial, Helvetica, sans-serif; }
     font-size: 13px;
     margin-right: 5px;
     padding: 10px;
+    text-decoration:none;
+}
+.user-menu li a:hover{
+    text-decoration: underline;
 }
 .user-menu li a i.fa {
     margin-right: 5px;
@@ -64,7 +68,7 @@ body { font-family:Arial, Helvetica, sans-serif; }
 .header-right ul.list-inline li ul a {
     padding: 5px 15px;
 }
-.header-right ul.list-inline li ul {
+.header-right ul.list-inline li ul ,.user-menu ul li ul{
     border: medium none;
     border-radius: 0;
     left: 50%;
