--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,6 @@
+.sticky-wrapper {
+    height: unset !important;
+}
 .floatleft { float: left }
 .floatright { float: right }
 .alignleft {
@@ -20,6 +23,9 @@ img {
 .active-pagination {
     background-color: #e67e22;
     color:white;
+}
+.form-select {
+    height: 46px;
 }
 .b-radius-0 {
     border-radius: 0px !important;
