--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -9,3 +9,6 @@
 .accordion-button:focus {
     box-shadow: 0 0 0 0.25rem rgba(230, 126, 34, 0.3);
 }
+.single-shop-product .product-upper img {
+    width:250px;
+}
