--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,6 +398,9 @@ z-index: 999;}
     min-height: 225px;
     object-fit: cover !important;
 }
+.text-green {
+    color:greenyellow;
+}
 .product-hover {
     height: 100%;
     left: 0;
