--- a/assets/css/order-manager.css
+++ b/assets/css/order-manager.css
@@ -1,5 +1,5 @@
-.d-ini {
-    width:210px !important;
+.d-filter {
+    flex:0 0 250px !important;
 }
 #products , .detail-order {
     padding:20px;
@@ -17,4 +17,7 @@
 }
 #modal-order-detail .modal-body{
     padding:0;
+}
+#pedido-id,#pedido-status {
+    color: #b95b02;
 }
